fsm/rustfsm_procmacro/tests/trybuild/no_handle_conversions_require_into_fail.stderr
error[E0277]: the trait bound `One: From<Two>` is not satisfied
   --> tests/trybuild/no_handle_conversions_require_into_fail.rs:11:18
    |
11  |     Two --(B)--> One;
    |                  ^^^ the trait `From<Two>` is not implemented for `One`
    |
    = note: required for `Two` to implement `Into<One>`
note: required by a bound in `TransitionResult::<Sm, Ds>::from`
   --> $WORKSPACE/fsm/rustfsm_trait/src/lib.rs
    |
    |         CurrentState: Into<Ds>,
    |                       ^^^^^^^^ required by this bound in `TransitionResult::<Sm, Ds>::from`
